update file storage requst api
