# docs/swagger.json
@@ -40,7 +40,7 @@
 				],
 				"type": "object"
 			},
-			"UserCreateRequest": {
+			"AuthRegisterRequest": {
 				"properties": {
 					"phone": {
 						"type": "string"
@@ -89,78 +89,6 @@
 					"phone",
 					"email",
 					"uid"
-				],
-				"type": "object"
-			},
-			"DataResponse_Array_UserModel__": {
-				"properties": {
-					"data": {
-						"items": {
-							"$ref": "#/components/schemas/UserModel"
-						},
-						"type": "array"
-					},
-					"status": {
-						"type": "number",
-						"format": "double"
-					}
-				},
-				"required": [
-					"data",
-					"status"
-				],
-				"type": "object"
-			},
-			"DataResponse_UserModel_": {
-				"properties": {
-					"data": {
-						"$ref": "#/components/schemas/UserModel"
-					},
-					"status": {
-						"type": "number",
-						"format": "double"
-					}
-				},
-				"required": [
-					"data",
-					"status"
-				],
-				"type": "object"
-			},
-			"UserUpdateRequest": {
-				"properties": {
-					"phone": {
-						"type": "string"
-					},
-					"email": {
-						"type": "string"
-					},
-					"name": {
-						"type": "string"
-					}
-				},
-				"type": "object"
-			},
-			"AuthRegisterRequest": {
-				"properties": {
-					"phone": {
-						"type": "string"
-					},
-					"password": {
-						"type": "string"
-					},
-					"email": {
-						"type": "string"
-					},
-					"name": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"phone",
-					"password",
-					"email",
-					"name"
 				],
 				"type": "object"
 			},
@@ -214,6 +142,109 @@
 					"email"
 				],
 				"type": "object"
+			},
+			"FileStorageModel": {
+				"properties": {
+					"url": {
+						"type": "string"
+					},
+					"dirPath": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"url",
+					"dirPath"
+				],
+				"type": "object"
+			},
+			"DataResponse_FileStorageModel_": {
+				"properties": {
+					"data": {
+						"$ref": "#/components/schemas/FileStorageModel"
+					},
+					"status": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"data",
+					"status"
+				],
+				"type": "object"
+			},
+			"UserCreateRequest": {
+				"properties": {
+					"phone": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					},
+					"name": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"phone",
+					"password",
+					"email",
+					"name"
+				],
+				"type": "object"
+			},
+			"DataResponse_Array_UserModel__": {
+				"properties": {
+					"data": {
+						"items": {
+							"$ref": "#/components/schemas/UserModel"
+						},
+						"type": "array"
+					},
+					"status": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"data",
+					"status"
+				],
+				"type": "object"
+			},
+			"DataResponse_UserModel_": {
+				"properties": {
+					"data": {
+						"$ref": "#/components/schemas/UserModel"
+					},
+					"status": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"data",
+					"status"
+				],
+				"type": "object"
+			},
+			"UserUpdateRequest": {
+				"properties": {
+					"phone": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					},
+					"name": {
+						"type": "string"
+					}
+				},
+				"type": "object"
 			}
 		},
 		"securitySchemes": {
@@ -238,6 +269,167 @@
 		}
 	},
 	"paths": {
+		"/health-check": {
+			"get": {
+				"operationId": "GetMessage",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "string"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Health Check"
+				],
+				"security": [],
+				"parameters": []
+			}
+		},
+		"/api/v1/auth/register": {
+			"post": {
+				"operationId": "registerUser",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"anyOf": [
+										{
+											"$ref": "#/components/schemas/DataResponse_string_"
+										},
+										{
+											"$ref": "#/components/schemas/ErrorResponse"
+										}
+									]
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Authentication"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/AuthRegisterRequest"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/v1/auth/login": {
+			"post": {
+				"operationId": "loginUser",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"anyOf": [
+										{
+											"$ref": "#/components/schemas/DataResponse_AuthView_"
+										},
+										{
+											"$ref": "#/components/schemas/ErrorResponse"
+										}
+									]
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Authentication"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/AuthLoginRequest"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/v1/upload-file": {
+			"post": {
+				"operationId": "uploadFile",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"anyOf": [
+										{
+											"$ref": "#/components/schemas/DataResponse_FileStorageModel_"
+										},
+										{
+											"$ref": "#/components/schemas/ErrorResponse"
+										}
+									]
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Upload File"
+				],
+				"security": [
+					{
+						"X-API-TOKEN": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "dirPath",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"multipart/form-data": {
+							"schema": {
+								"type": "object",
+								"properties": {
+									"file": {
+										"type": "string",
+										"format": "binary"
+									}
+								},
+								"required": [
+									"file"
+								]
+							}
+						}
+					}
+				}
+			}
+		},
 		"/api/v1/user/create": {
 			"post": {
 				"operationId": "createUser",
@@ -448,106 +640,6 @@
 						}
 					}
 				]
-			}
-		},
-		"/health-check": {
-			"get": {
-				"operationId": "GetMessage",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"type": "string"
-								}
-							}
-						}
-					}
-				},
-				"tags": [
-					"Health Check"
-				],
-				"security": [],
-				"parameters": []
-			}
-		},
-		"/api/v1/auth/register": {
-			"post": {
-				"operationId": "registerUser",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"anyOf": [
-										{
-											"$ref": "#/components/schemas/DataResponse_string_"
-										},
-										{
-											"$ref": "#/components/schemas/ErrorResponse"
-										}
-									]
-								}
-							}
-						}
-					}
-				},
-				"tags": [
-					"Authentication"
-				],
-				"security": [],
-				"parameters": [],
-				"requestBody": {
-					"required": true,
-					"content": {
-						"application/json": {
-							"schema": {
-								"$ref": "#/components/schemas/AuthRegisterRequest"
-							}
-						}
-					}
-				}
-			}
-		},
-		"/api/v1/auth/login": {
-			"post": {
-				"operationId": "loginUser",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"anyOf": [
-										{
-											"$ref": "#/components/schemas/DataResponse_AuthView_"
-										},
-										{
-											"$ref": "#/components/schemas/ErrorResponse"
-										}
-									]
-								}
-							}
-						}
-					}
-				},
-				"tags": [
-					"Authentication"
-				],
-				"security": [],
-				"parameters": [],
-				"requestBody": {
-					"required": true,
-					"content": {
-						"application/json": {
-							"schema": {
-								"$ref": "#/components/schemas/AuthLoginRequest"
-							}
-						}
-					}
-				}
 			}
 		}
 	},
