# src/data/models/file_storage_model.ts
@@ -1,0 +1,4 @@
+export type FileStorageModel = {
+    dirPath: string;
+    url: string;
+};
