# src/data/requests/file_storage_request.ts
@@ -1,0 +1,4 @@
+export type FileStorageRequest = {
+    dirPath: string;
+    file: Express.Multer.File;
+};
