# src/routes/public_router.ts
@@ -12,16 +12,16 @@ publicRouter.get("/health-check", async (_req, res) => {
     return res.status(res.statusCode).send(response);
 });
 
-publicRouter.post("/api/v1/auth/login", async (req: Request, res: Response, _next: NextFunction) => {
+publicRouter.post("/api/v1/auth/login", async (req: Request, res: Response, next: NextFunction) => {
     const reqBody: AuthLoginRequest = req.body;
-    const controller = new AuthController(res);
+    const controller = new AuthController(res, next);
     const response = await controller.login(reqBody);
     res.status(res.statusCode).send(response);
 });
 
-publicRouter.post("/api/v1/auth/register", async (req: Request, res: Response, _next: NextFunction) => {
+publicRouter.post("/api/v1/auth/register", async (req: Request, res: Response, next: NextFunction) => {
     const reqBody: AuthRegisterRequest = req.body;
-    const controller = new AuthController(res);
+    const controller = new AuthController(res, next);
     const response = await controller.register(reqBody);
     res.status(res.statusCode).send(response);
 });
